--- a/Combined_VIF_analysis/InsertionAnalysis/Filter_Insertions.Rmd
+++ b/Combined_VIF_analysis/InsertionAnalysis/Filter_Insertions.Rmd
@@ -59,7 +59,7 @@ nrow(insertions_data)
 ```{r}
 
 
-write.table(insertions_data, file="all_insertions_and_virus_content_merged.FILTERED.tsv")
+write.table(insertions_data, file="all_insertions_and_virus_content_merged.FILTERED.tsv", sep="\t", quote=F, row.names=F)
 
 ```
 
