--- a/Combined_VIF_analysis/Insertion_and_CNVs/Insertions_and_CNVs.Rmd
+++ b/Combined_VIF_analysis/Insertion_and_CNVs/Insertions_and_CNVs.Rmd
@@ -25,7 +25,7 @@ insertions_and_cnv_data = read.table("TCGA_insertions_and_CNV_within10kb", sep="
 insertions_data = read.table("../InsertionAnalysis/all_insertions_and_virus_content_merged.FILTERED.tsv", 
                              header=T, sep="\t", stringsAsFactors = F)
 
-insertions_data = insertions_data %>% select(sample_id, contig, humanchr, human_coord, total_rpm)
+insertions_data = insertions_data %>% select(sample_id, virus, contig, humanchr, human_coord, total_rpm)
 
 
 ```
@@ -34,7 +34,7 @@ insertions_data = insertions_data %>% select(sample_id, contig, humanchr, human_
 
 insertions_and_cnv_data = left_join(insertions_and_cnv_data %>% rename(sample_id = sample, contig=insertion), 
                                          insertions_data %>% select(-humanchr),
-                                         by=c('sample_id', 'contig'))
+                                         by=c('sample_id', 'contig', 'virus'))
 
 ```
 
@@ -47,7 +47,7 @@ BINSIZE=1000000
 nrow(insertions_and_cnv_data)
 
 insertions_and_cnv_data = insertions_and_cnv_data %>% 
-  mutate(bin = paste0(chrom, "^", round(human_coord / BINSIZE))) %>% group_by(sample_id, bin) %>% 
+  mutate(bin = paste0(chrom, "^", round(human_coord / BINSIZE))) %>% group_by(sample_id, virus, bin) %>% 
   arrange(desc(total_rpm)) %>% filter(row_number()==1) %>% ungroup()
 
 nrow(insertions_and_cnv_data)
@@ -81,8 +81,8 @@ nrow(random_loc_data)
 ```{r}
 
 random_loc_data = inner_join(random_loc_data %>% rename(sample_id = sample, contig=insertion),
-                             insertions_and_cnv_data %>% select(sample_id, contig),
-                             by=c('sample_id', 'contig') )
+                             insertions_and_cnv_data %>% select(sample_id, contig, virus),
+                             by=c('sample_id', 'contig', 'virus') )
 
 nrow(random_loc_data)
 
@@ -124,18 +124,19 @@ viruses = combined_data %>% select(virus) %>% unique() %>% pull(virus)
 stats_df = NULL
 
 for (virus_name in viruses) {
-  
+  message(virus_name)
   virus_data = combined_data %>% filter(virus == virus_name)
   real_insertions_cnv = virus_data %>% filter(type=='real') %>% pull(copy_number)
   random_loc_cnv = virus_data %>% filter(type=='random_loc') %>% pull(copy_number)
   
-  w = wilcox.test(real_insertions_cnv, random_loc_cnv, alternative='greater')
- 
-  #message(virus_name)
-  #print(w)
+  if (length(real_insertions_cnv) >= 3 & length(random_loc_cnv >= 3)) {
+     w = wilcox.test(real_insertions_cnv, random_loc_cnv, alternative='greater')
   
-  stats_df = bind_rows(stats_df, data.frame(virus=virus_name, p_raw = w$p.value))
+     #message(virus_name)
+     #print(w)
   
+    stats_df = bind_rows(stats_df, data.frame(virus=virus_name, p_raw = w$p.value))
+   }
 }
 
 stats_df$p_bh = p.adjust(stats_df$p, method='hochberg')
